IVYPORTAL-8411: Integrate Serenity Branch in Trunk - Merged trunk to serenity